Switch to NeoForge, bump Quilt to 0.19.3