@@ -1,8 +1,14 @@
 package net.pillowmc.pillow;
 
-import net.fabricmc.api.EnvType;
-import net.minecraftforge.fml.loading.FMLLoader;
-import net.minecraftforge.fml.loading.FMLServiceProvider;
+import java.io.File;
+import java.io.FileOutputStream;
+import java.io.IOException;
+import java.nio.file.Path;
+import java.util.Arrays;
+import java.util.Collection;
+import java.util.List;
+import java.util.jar.JarOutputStream;
+
 import org.quiltmc.loader.api.Version;
 import org.quiltmc.loader.impl.entrypoint.GameTransformer;
 import org.quiltmc.loader.impl.game.GameProvider;
@@ -10,12 +16,8 @@ import org.quiltmc.loader.impl.launch.common.QuiltLauncher;
 import org.quiltmc.loader.impl.metadata.qmj.V1ModMetadataBuilder;
 import org.quiltmc.loader.impl.util.Arguments;
 
-import java.net.URISyntaxException;
-import java.nio.file.Path;
-import java.nio.file.Paths;
-import java.util.Arrays;
-import java.util.Collection;
-import java.util.List;
+import net.fabricmc.api.EnvType;
+import net.minecraftforge.fml.loading.FMLLoader;
 
 public class PillowGameProvider implements GameProvider {
     private String[] args;
@@ -46,17 +48,21 @@ public class PillowGameProvider implements GameProvider {
         minecraftMetadata.id = getGameId();
         minecraftMetadata.version = Version.of(getRawGameVersion());
         minecraftMetadata.name = getGameName();
+        minecraftMetadata.group = "builtin";
         minecraftMetadata.description = "Obfuscated as Searge name, MCP version = %s".formatted(FMLLoader.versionInfo().mcpVersion());
         V1ModMetadataBuilder forgeMetadata = new V1ModMetadataBuilder();
         forgeMetadata.id = "forge";
         forgeMetadata.version = Version.of(FMLLoader.versionInfo().forgeVersion());
-        forgeMetadata.group = FMLLoader.versionInfo().forgeGroup();
+        forgeMetadata.group = "net.neoforged";
         try {
-            var path=FMLServiceProvider.class.getProtectionDomain().getCodeSource().getLocation().toURI();
-            return Arrays.asList(new BuiltinMod(List.of(Paths.get(path)), minecraftMetadata.build()),
-                    new BuiltinMod(List.of(Paths.get(path)), forgeMetadata.build())
+            var output = File.createTempFile("minecraft.virtual", ".jar");
+            var path=output.toPath();
+            JarOutputStream outJar=new JarOutputStream(new FileOutputStream(output));
+            outJar.close();
+            return Arrays.asList(new BuiltinMod(List.of(path), minecraftMetadata.build()),
+                new BuiltinMod(List.of(path), forgeMetadata.build())
             );
-        } catch (URISyntaxException e) {
+        } catch (IOException e) {
             throw new RuntimeException(e);
         }
     }
